[gd_scene load_steps=20 format=2]

[ext_resource path="res://Game/Levels/Pseudocode/Cap3Theory.gd" type="Script" id=1]
[ext_resource path="res://Game/Pets/AnyPet.tscn" type="PackedScene" id=2]
[ext_resource path="res://Game/Levels/Pseudocode/Images/HolaMundoJava.png" type="Texture" id=3]
[ext_resource path="res://Game/Levels/Pseudocode/Images/HolaMundoRuby.png" type="Texture" id=4]
[ext_resource path="res://Game/Levels/TheoryTemplate.tscn" type="PackedScene" id=5]

[sub_resource type="Animation" id=1]

resource_name = "anim1"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("AnyPet:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 0.7, 0.7 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnyPet:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -1440.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnyPet:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -63.9999, -64 ), Vector2( 608, 352 ) ]
}

[sub_resource type="Animation" id=2]

resource_name = "anim10"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("AnyPet:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.6, 0.6 ), Vector2( 0.5, 0.5 ) ]
}

[sub_resource type="Animation" id=14]

resource_name = "anim11"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("AnyPet:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( -4, -4, -4 ),
"update": 0,
"values": [ Vector2( 608, 368 ), Vector2( 608, 160 ), Vector2( 608, 368 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnyPet:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( -4, -4, -4 ),
"update": 0,
"values": [ Vector2( 0.5, 0.5 ), Vector2( 0.7, 0.7 ), Vector2( 0.5, 0.5 ) ]
}

[sub_resource type="Animation" id=3]

resource_name = "anim12"
length = 1.0
loop = false
step = 0.1

[sub_resource type="Animation" id=4]

resource_name = "anim13"
length = 1.0
loop = false
step = 0.1

[sub_resource type="Animation" id=5]

resource_name = "anim14"
length = 1.0
loop = false
step = 0.1

[sub_resource type="Animation" id=6]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("AnyPet:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.7, 0.7 ), Vector2( 0.7, 0.7 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnyPet:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 608, 352 ), Vector2( 272, 352 ) ]
}

[sub_resource type="Animation" id=7]

length = 1.0
loop = false
step = 0.1

[sub_resource type="Animation" id=8]

resource_name = "anim4"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("AnyPet:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 272, 352 ), Vector2( 992, 352 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnyPet:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.7, 0.7 ), Vector2( 0.7, 0.7 ) ]
}

[sub_resource type="Animation" id=9]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("AnyPet:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 992, 352 ), Vector2( 240, 352 ) ]
}

[sub_resource type="Animation" id=10]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("AnyPet:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 240, 352 ), Vector2( 144, 432 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Java:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( -4, 1 ),
"update": 0,
"values": [ Vector2( 1648, 336 ), Vector2( 848, 336 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Java:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( -4, 1 ),
"update": 0,
"values": [ -360.0, 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Java:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( -4, 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=11]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Java:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( -4, 1 ),
"update": 0,
"values": [ Vector2( 848, 336 ), Vector2( 1712, 336 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Ruby:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( -4, 1 ),
"update": 0,
"values": [ Vector2( 1712, 336 ), Vector2( 896, 336 ) ]
}

[sub_resource type="Animation" id=12]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Ruby:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( -4, 1 ),
"update": 0,
"values": [ Vector2( 896, 336 ), Vector2( 1712, 336 ) ]
}

[sub_resource type="Animation" id=13]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("AnyPet:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 144, 432 ), Vector2( 608, 368 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnyPet:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.7, 0.7 ), Vector2( 0.6, 0.6 ) ]
}

[node name="Cap3Theory" type="Node" index="0"]
script = ExtResource( 1 )

[node name="AnyPet" parent="." index="0" instance=ExtResource( 2 )]
editor/display_folded = true
position = Vector2( 608, 160 )
scale = Vector2( 0.7, 0.7 )
_sections_unfolded = [ "Material", "Pause", "Transform", "Visibility", "Z Index" ]

[node name="Java" type="Sprite" parent="." index="1"]
position = Vector2( 1712, 336 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="Ruby" type="Sprite" parent="." index="2"]
position = Vector2( 1712, 336 )
texture = ExtResource( 4 )
_sections_unfolded = [ "Transform" ]

[node name="TheoryTemplate" parent="." index="3" instance=ExtResource( 5 )]
editor/display_folded = true

[node name="Anim" type="AnimationPlayer" parent="." index="4"]
root_node = NodePath("..")
autoplay = "anim1"
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/anim1 = SubResource( 1 )
anims/anim10 = SubResource( 2 )
anims/anim11 = SubResource( 14 )
anims/anim12 = SubResource( 3 )
anims/anim13 = SubResource( 4 )
anims/anim14 = SubResource( 5 )
anims/anim2 = SubResource( 6 )
anims/anim3 = SubResource( 7 )
anims/anim4 = SubResource( 8 )
anims/anim5 = SubResource( 9 )
anims/anim6 = SubResource( 10 )
anims/anim7 = SubResource( 11 )
anims/anim8 = SubResource( 12 )
anims/anim9 = SubResource( 13 )
blend_times = [  ]

[connection signal="changed_text" from="TheoryTemplate/RPGDialog" to="." method="_on_RPGDialog_changed_text"]
[connection signal="changed_text" from="TheoryTemplate/RPGDialog" to="TheoryTemplate" method="_on_RPGDialog_changed_text"]
[connection signal="animation_finished" from="TheoryTemplate/Anim" to="." method="_on_Anim_animation_finished"]

[editable path="AnyPet"]

[editable path="TheoryTemplate"]
